--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test:ui": "playwright test --ui",
     "test:headed": "playwright test --headed",
     "test:debug": "playwright test --debug",
-    "codegen": "playwright codegen"
+    "codegen": "playwright codegen",
+    "lint": "eslint playwright.config.ts tests/**/*.ts",
+    "lint:fix": "eslint playwright.config.ts tests/**/*.ts --fix"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +19,11 @@
     "@faker-js/faker": "^9.9.0",
     "@playwright/test": "^1.58.2",
     "@types/node": "^25.3.0",
-    "dotenv": "^17.3.1"
+    "@typescript-eslint/eslint-plugin": "^8.56.1",
+    "@typescript-eslint/parser": "^8.56.1",
+    "dotenv": "^17.3.1",
+    "eslint": "^8.57.1",
+    "eslint-plugin-playwright": "^2.8.0"
   },
   "dependencies": {
     "nanoid": "^5.1.6"
